fix nav li render error, add spacing to codeAndCoffee linkedPosts, add mobile view responsiveness to codeAndCoffee linkedPosts, fix nav bar meetup link, fix nav bar spacing

--- a/css/global.css
+++ b/css/global.css
@@ -413,3 +413,11 @@ section article {
   font-weight: bold;
   margin: 2rem 0rem;
 }
+
+#meetup .coffeeLinkedIn {
+  margin: 2rem 0rem;
+}
+
+#meetup .coffeeLinkedIn iframe {
+  margin: 0rem 2rem;
+}
