--- a/css/globalMediaQuery.css
+++ b/css/globalMediaQuery.css
@@ -28,6 +28,10 @@
   #project .projects #article .buttons {
     width: 40%;
   }
+
+  #meetup .coffeeLinkedIn {
+    flex-direction: column;
+  }
 }
 
 @media (max-width: 1100px) {
